--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         </div>
 
         <div class="row">
+          <label>8×4 Tile Mode</label>
+          <input type="checkbox" id="tileModeCheck" />
+        </div>
+
+        <div class="row">
           <label>Energy metric</label>
           <select id="energySel">
             <option value="react">E = U·V² (reaction)</option>
